--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -1,29 +1,50 @@
-@media only screen and (min-width: 600px) {
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+@media only screen and (min-width: 400px) and (max-width: 1050px){
+  .wrapper {
+    margin: 0px;
+    background-color: #E8E8E8;
+  }
+
+  /* LOGO & NAV */
   .logobackground {
     display: inline;
     float: left;
+    padding-left: 10px;
   }
 
-  .logotype {
+  .logotext {
     position: absolute;
     top: 116px;
-    left: 60px;;
+    left: 70px;;
   }
 
   .nav {
-    width: 37%;
+    width: 32%;
     display: inline;
     position: absolute;
+    float: right;
   }
 
   .nav hr:first-child {
     display: none;
   }
 
-  .nav li {
+  .nav ul {
     float: none;
     width: 70%;
-    margin: 0px auto;
+    margin: 0px 10px;
+  }
+
+  .nav li {
+    width: 100%;
+    padding-left: 90px;
   }
 
   .nav hr {
@@ -41,11 +62,11 @@
     font-weight: bold;
   }
 
+  /* MAIN PARAGRAPH */
   .maincontent {
-    background-color: #e8e8e8;
-    position: absolute;
     padding: 0 0 0 2%;
-    width: 70%;
+    width: 100%;
+    float: right;
   }
 
   .maincontent h2 {
@@ -60,7 +81,24 @@
     width: 60%;
   }
 
-  .space img {
+  /* PICTURES */
+  .profilepics {
+    width: 100%;
+    margin-bottom: 20px;
+    float: right;
+  }
+
+  .profilepics img {
+    margin: 10px;
+  }
+
+  .profilepics li:nth-child(odd) {
+    margin: 0px;
+    float: left;
+  }
+
+  /* FOOTER */
+  .footer img {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -72,9 +110,6 @@
     text-align: center;
     font-size: 12px;
     margin: 25px ;
-    position: absolute;
-    bottom: 200px;
-  }
 
   .footer p {
   line-height: 70%
@@ -83,5 +118,15 @@
   .footer a {
     color: maroon;
     text-decoration: none;
+  }
+
+  .footer a:hover {
+    color: red;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .wrapper {
+    color: blue;
   }
 }
