make background cover and no-repeat

--- a/CSprojects/epicodus-projects/javascript/emberPractice/super-rentals/app/templates/components/rental-detail.hbs
+++ b/CSprojects/epicodus-projects/javascript/emberPractice/super-rentals/app/templates/components/rental-detail.hbs
@@ -1,6 +1,9 @@
 Located in {{rental.city.name}}, this {{rental.bedrooms}} bedroom {{rental.type}} is
 available by arrangement through {{rental.owner}}.
 <br>
-<p><img src={{rental.image}} alt={{rental.type}}></p>
+<img src={{rental.image}} alt={{rental.type}}>
+
+<h3>Map of {{rental.city.name}}'s {{rental.type}}:</h3>
+{{google-map rental=rental}}
 
 <button {{action 'delete' rental}}>Delete</button>
