--- a/CSprojects/epicodus-projects/javascript/emberPractice/super-rentals/app/templates/components/new-rental.hbs
+++ b/CSprojects/epicodus-projects/javascript/emberPractice/super-rentals/app/templates/components/new-rental.hbs
@@ -27,6 +27,16 @@
           {{input value=cost id="cost"}}
         </div>
 
+        <div class="form-group">
+          <label for="latitude">Latitude</label>
+          {{input value=latitude id="latitude"}}
+        </div>
+
+        <div class="form-group">
+          <label for="longitude">Longitude</label>
+          {{input value=longitude id="longitude"}}
+        </div>
+
         <button {{action 'save1'}}>Save</button>
       </form>
     </div>
